--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@azure/storage-blob": "^12.8.0",
     "axios": "^0.25.0",
     "download-file-sync": "^1.0.4",
+    "jimp": "^0.16.1",
     "node-fetch": "^3.2.0"
   },
   "devDependencies": {}
