--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "@azure/storage-blob": "^12.8.0",
+    "@azure/storage-queue": "^12.7.0",
     "axios": "^0.25.0",
     "download-file-sync": "^1.0.4",
     "jimp": "^0.16.1",
     "node-fetch": "^3.2.0",
+    "node-mailjet": "^3.3.5",
     "sharp": "^0.30.0"
   },
   "devDependencies": {}
