--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/identity": "^2.0.2",
+    "@azure/keyvault-secrets": "^4.3.0",
     "@azure/storage-blob": "^12.8.0",
     "@azure/storage-queue": "^12.7.0",
     "axios": "^0.25.0",
