--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/cosmos": "^3.15.1",
     "@azure/identity": "^2.0.2",
     "@azure/keyvault-secrets": "^4.3.0",
     "@azure/storage-blob": "^12.8.0",
