--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@azure/storage-queue": "^12.7.0",
     "axios": "^0.25.0",
     "download-file-sync": "^1.0.4",
+    "filesize": "^8.0.7",
     "jimp": "^0.16.1",
     "node-fetch": "^3.2.0",
     "node-mailjet": "^3.3.5",
