--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -40,16 +40,10 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-    - name: Change Directory
+    - name: Create Infra
       shell: pwsh
       run: |
         pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-        az deployment group create --resource-group Ankita-Bicep-RG --template-file infra/Image-processor-infra.bicep  --query properties.outputs.sqlRoleAssignmentId
-    - name: Azure CLI script
+        az deployment group create --resource-group Ankita-Bicep-RG --template-file ./infra/Image-processor-infra.bicep  --query properties.outputs.sqlRoleAssignmentId
     
-      uses: azure/CLI@v1
-      with:
-        azcliversion: 2.30.0
-        inlineScript: |
-         az deployment group create --resource-group Ankita-Bicep-RG --template-file infra/Image-processor-infra.bicep  --query properties.outputs.sqlRoleAssignmentId
-# For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
+     # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
