--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -43,15 +43,15 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-    - name: Create Infra
-      uses: azure/CLI@v1
-      with:
-        azcliversion: 2.30.0
-        inlineScript: |
-         az deployment group create --resource-group Ankita-Bicep-RG --template-file Infra/Image-processor-infra.bicep  --query properties.outputs.sqlRoleAssignmentId
-    - name: 'Resolve Project Dependencies Using Npm'
+    #- name: Create Infra
+    #  uses: azure/CLI@v1
+    #  with:
+    #    azcliversion: 2.30.0
+    #    inlineScript: |
+    #     az deployment group create --resource-group Ankita-Bicep-RG --template-file Infra/Image-processor-infra.bicep  --query properties.outputs.sqlRoleAssignmentId
+    - name: 'Deploy Function Code'
       shell: pwsh
       run: |
-        curl -X POST -u ${{ secrets.FUNCTION_CODE_DEPLOYMENT_SECRET }} --data-binary @"functionDeploymetPackage.zip" https://image-processor-function-app-4lzwihpqta32o.scm.azurewebsites.net/api/zipdeploy
+        curl -u ${{ secrets.FUNCTION_CODE_DEPLOYMENT_SECRET }} -d @functionDeploymetPackage.zip https://image-processor-function-app-4lzwihpqta32o.scm.azurewebsites.net/api/zipdeploy
 
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
