--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -52,6 +52,7 @@ jobs:
     - name: 'Deploy Function Code'
       shell: pwsh
       run: |
+        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
         curl -v -X POST -u ${{ secrets.FUNCTION_CODE_DEPLOYMENT_SECRET }} -d @functionDeploymetPackage.zip https://image-processor-function-app-4lzwihpqta32o.scm.azurewebsites.net/api/zipdeploy
-
+        popd
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
