--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -50,9 +50,7 @@ jobs:
     #    inlineScript: |
     #     az deployment group create --resource-group Ankita-Bicep-RG --template-file Infra/Image-processor-infra.bicep  --query properties.outputs.sqlRoleAssignmentId
     - name: 'Deploy Function Code'
-      shell: pwsh
-      run: |
-        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-        curl -v -X POST -u ${{ secrets.FUNCTION_CODE_DEPLOYMENT_SECRET }} -d @functionDeploymetPackage.zip https://image-processor-function-app-4lzwihpqta32o.scm.azurewebsites.net/api/zipdeploy
-        popd
-# For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
+      uses: wei/curl@v1
+      with:
+        args:  -u ${{ secrets.FUNCTION_CODE_DEPLOYMENT_SECRET }} --upload-file functionDeploymetPackage.zip https://image-processor-function-app-4lzwihpqta32o.scm.azurewebsites.net/api/zipdeploy
+ # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
