--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -47,8 +47,8 @@ jobs:
       with:
         azcliversion: 2.30.0
         inlineScript: |
-             az deployment group create --resource-group Ankita-Bicep-RG --template-file Infra/Image-processor-infra.bicep  --query properties.outputs.sqlRoleAssignmentId
-    - name: 'Deploy Function Code'
-      uses: wei/curl@v1
-      with:
-        args:  -u ${{ secrets.FUNCTION_CODE_DEPLOYMENT_SECRET }} --upload-file functionDeploymetPackage.zip https://image-processor-function-app-4lzwihpqta32o.scm.azurewebsites.net/api/zipdeploy
+            az deployment group create --resource-group Ankita-Bicep-RG --template-file Infra/Image-processor-infra.bicep  --query properties.outputs.sqlRoleAssignmentId
+    #- name: 'Deploy Function Code'
+    #  uses: wei/curl@v1
+    #  with:
+    #    args: -u ${{ secrets.FUNCTION_CODE_DEPLOYMENT_SECRET }} --upload-file functionDeploymetPackage.zip https://image-processor-function-app-4lzwihpqta32o.scm.azurewebsites.net/api/zipdeploy
